--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,41 @@
     <groupId>com.tju.elmcloud</groupId>
     <artifactId>ELM-SpringCloud</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>user_server_10100</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <!--
+        depend management是用在父工程中声明依赖，不引用。子模块继承之后再引包。
+        作用是，锁定版本，子模块不用写group id and version
+    -->
+    <dependencyManagement>
+        <dependencies>
+            <!--boot 2.3.3 -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.7.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!--cloud hoxton.sr9 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Hoxton.SR9</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
