--- a/orders_server_10600/src/main/resources/application.yml
+++ b/orders_server_10600/src/main/resources/application.yml
@@ -8,7 +8,7 @@ logging:
 
 spring:
   application:
-    name: deliveryaddress-server
+    name: orders-server
   datasource:
     username: root
     password: root
@@ -19,3 +19,12 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.tju.elmcloud.po
 
+#eureka配置
+eureka:
+  client:
+    service-url:
+      #将自己注册给Eureka Server集群
+      defaultZone: http://eurekaServer13000:13000/eureka,http://eurekaServer13001:13001/eureka
+  instance:
+    prefer-ip-address: true #使用ip地址向Eureka注册
+    instance-id: ${spring.cloud.client.ip-address}:${server.port} #自定义微服务实例ID
