--- a/food_server_10201/pom.xml
+++ b/food_server_10201/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>business_server_10300</artifactId>
+    <artifactId>food_server_10201</artifactId>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -20,11 +20,6 @@
     <packaging>jar</packaging>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -38,13 +33,12 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>2.2.2</version>
+            <version>2.0.1</version>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-<!--            <version></version>-->
             <scope>runtime</scope>
         </dependency>
 
@@ -52,6 +46,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
+            <!--            <version>2.0.2.RELEASE</version>-->
             <optional>true</optional>
             <scope>runtime</scope>
         </dependency>
