--- a/orders_server_10601/pom.xml
+++ b/orders_server_10601/pom.xml
@@ -50,6 +50,11 @@
             <optional>true</optional>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 
     <!--    <build>-->
