--- a/business_server_10300/pom.xml
+++ b/business_server_10300/pom.xml
@@ -55,6 +55,18 @@
             <optional>true</optional>
             <scope>runtime</scope>
         </dependency>
+
+        <!--加入spring-cloud-config的依赖 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>
 
     <!--    <build>-->
